# tarantula

./: .gitignore  README.md
docs/: 00-project-plan.md  01-control-architecture.md  02-project-goals.md  03-isaac-lab-setup.md  04-m7-rl-suspension.md  05-chassis-model-redesign.md
scripts/: check_terrain_freshness.py  contact_loss_benchmark.sh  debug_capture.sh  dynamic_benchmark.sh  flat_stability_check.sh  gazebo_chassis_pose_diffdrive_test.py  gazebo_cmd_tracking_benchmark.py  gazebo_eval_common.py  gazebo_eval_compare.py  gazebo_motion_calibration.py  gazebo_posture_eval.py  gazebo_pursuit_eval.py  gazebo_wheel_open_loop_benchmark.py  generate_diagonal_maze_demo.py  generate_slope_world.py  isaac_eval_gate.py  isaac_geometry_check.sh  isaac_shared_terrain_smoke.sh  leveling_benchmark.sh  nav2_frontier_explore.py  nav_mission.py  publish_cmd_profile.py  run_ppo_train_v5.sh  run_rl_env_smoke_v5.sh
src/tarantula_bringup/: CMakeLists.txt  package.xml
src/tarantula_bringup/config/: controllers.yaml  controllers_v2_position.yaml  ekf.yaml  nav.rviz  nav2.yaml  nav2_slam_costmap_overlay.yaml  posture.rviz  slam.rviz  slam.yaml
src/tarantula_bringup/launch/: nav.launch.py  nav_static.launch.py  sim.launch.py  slam.launch.py
src/tarantula_bringup/worlds/: proving_ground.world  rough_terrain.world  tilt_test.world
src/tarantula_control/: package.xml  setup.cfg  setup.py
src/tarantula_control/tarantula_control/: active_suspension.py  cmd_vel_wheel_baseline.py  command_profiles.py  control_interfaces.py  gazebo_truth_odometry.py  motion_control.py  motion_control_node.py  posture_policy_node.py  rl_policy.py  rl_policy_weights.py  rl_suspension_policy.py  scan_gate.py  stand_suspension_hold.py  suspension_core.py  vehicle_geometry.py  wheel_odometry_node.py
src/tarantula_control/test/: test_command_profiles.py  test_control_interfaces.py  test_gazebo_cmd_tracking_benchmark.py  test_isaac_eval_gate.py
src/tarantula_description/: CMakeLists.txt  package.xml
src/tarantula_description/urdf/: tarantula.urdf.xacro  tarantula_chassis.xacro  tarantula_chassis_v2.xacro  tarantula_common.xacro  tarantula_core.urdf.xacro  tarantula_core_v2.urdf.xacro  tarantula_core_v3.urdf.xacro  tarantula_v2.urdf.xacro  tarantula_v3.urdf.xacro
src/tarantula_isaac/: __init__.py  eval_policy_v5.py  export_weights_v5.py  geometry_check.py  gui_smoke.py  heightmap_mesh.py  robot.py  shared_heightmap_terrain.py  shared_terrain_smoke.py  suspension_env.py  suspension_env_cfg.py  terrains.py  test_shared_heightmap_terrain.py  train_v5.py  yaw_authority_sweep.py
src/tarantula_isaac/agents/: __init__.py  rsl_rl_ppo_cfg.py
src/tarantula_terrain/: package.xml  setup.cfg  setup.py
src/tarantula_terrain/tarantula_terrain/: __init__.py  exporters.py  generate.py  generator.py  nav_maze.py  terrain_cfg.py
src/tarantula_terrain/test/: test_generate.py
