<?xml version="1.0"?>
<package format="3">
  <name>tarantula_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, controller configs and simulation worlds for the Tarantula chassis</description>
  <maintainer email="angli23@yahoo.com">ang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tarantula_description</exec_depend>
  <exec_depend>tarantula_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
