<?xml version="1.0"?>
<package format="3">
  <name>tarantula_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro description of the Tarantula six-wheel rocker chassis with active suspension</description>
  <maintainer email="angli23@yahoo.com">ang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
