<?xml version="1.0"?>
<package format="3">
  <name>tarantula_terrain</name>
  <version>0.1.0</version>
  <description>Seeded heightmap terrain generator and exporters for Tarantula Gazebo/Isaac workflows</description>
  <maintainer email="angli23@yahoo.com">ang</maintainer>
  <license>MIT</license>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
